@@ -1,3 +1,12 @@
+2008-10-15  Steve Huntley  <stephen.huntley@alum.mit.edu>
+
+	vfs::template package update ver. 1.5.3:
+
+	* templatevfs.tcl: Incorporated AK's fix below.
+	* collatevfs.tcl: ensured binary file contents got written
+	correctly, and ensured that not only file contents but 
+	also file attributes were updated to all write targets.
+
 2009-07-06  Andreas Kupries  <andreask@activestate.com>
 
 	* library/template/templatevfs.tcl (memchan): Fix result for
